static/styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    font-family: "Roboto", sans-serif;
}

.inner {
    display: grid;

    grid-template-columns: 250px 1fr 300px;
    height: 100%;
}

li {
    list-style: none;
}

/* SIDE BAR */
#nav {
    display: grid;
    grid-template-rows: 100px 1fr 200px;
    background: #1f2933;
}

    #nav.active {
        display: grid;
    }

.nav__container--logo {
    display: flex;
    align-items: center;
    justify-self: center;
}


.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 31px;
    height: 31px;
    border-radius: 7px;
    color: #fff;
    background-color: #6f32ff;
}

.nav__container--logo h1 {
    font-size: 30px;
    color: white;
    padding-left: 10px;
}

.nav-links {
    display: grid;
    grid-template-rows: repeat(auto-fit, 70px);
    align-content: center;
}

    .nav-links li {
        justify-self: center;
        align-self: center;
        font-size: 26px;
        color: #fff;
        cursor: pointer;
    }

        .nav-links li:not(:nth-child(1)) {
            color: #5b607e;
        }

.menu {
    display: none;
    position: absolute;
    top: 30px;
    left: 40px;
    justify-content: center;
    align-items: center;
    height: 23px;
    width: 30px;
    cursor: pointer;
}

    .menu .line {
        height: 3px;
        width: 100%;
        background: #f1f1f1;
        border-radius: 4px;
    }

    .menu::before {
        content: "";
        display: block;
        position: absolute;
        border-radius: 4px;
        top: 0;
        height: 3px;
        width: 100%;
        background: #f1f1f1;
    }

    .menu::after {
        content: "";
        display: block;
        position: absolute;
        border-radius: 4px;
        bottom: 0;
        height: 3px;
        width: 100%;
        background: #f1f1f1;
    }

/* Main */
main {
    display: grid;
    grid-template-rows: 100px max-content max-content 1fr;
    background-color: #323F4B;
    padding: 0 20px;
}

/* Main col 1 */
.main__col--1 {
    align-self: center;
}

    .main__col--1 h2 {
        font-weight: bold;
        font-size: 30px;
        color: #fff;
    }

/* Main col 2 */
.main__col--2 {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
}

.box {
    display: flex;
    background-color: #000000;
    border-radius: 7px;
    padding: 20px;
    box-shadow: 0 3px 19px rgb(0 0 0 / 3%);
    cursor: pointer;
    transition: all 0.2s ease;
}

    .box:hover {
        transform: translateY(-5px);
    }

.box--logo {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 50px;
    background-color: #9f32ff;
    border-radius: 9px;
}

.box--2 .box--logo {
    background-color: #ff9416;
}

.box--3 .box--logo {
    background-color: #738086;
}

.box--content {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding-left: 10px;
}

.box--title {
    color: #5b607e;
    font-size: 17px;
}

.box--number {
    font-size: 18px;
    font-weight: bold;
    color: white;
}

/* Main col 3 */
.main__col--3 {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-gap: 20px;
    margin: 20px 0;
    height: auto;
}

/* *******This is the container for the pressure plot******  */

        .container-2 {
        text-align: center;
        padding: 25px 20px;
        border-radius: 7px;
        background-color: #1f2933;
        color: white;
        }
        .row-1{
            width:auto;
        }
            .gauge-column{
                float: left;
                width: 25%;
            }
    .pressure--block {
        padding: 25px 20px;
        border-radius: 7px;
        background-color: #1f2933;
        color: white;
    }

        .pressure--block h5 {
            font-size: 13px;
            font-weight: lighter;
        }

        .pressure--block span {
            display: block;
            font-weight: bold;
            font-size: 18px;
            margin: 20px 0;
        }



/* Main col 4 */
.main__col--4 {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-gap: 20px;
    margin: 20px 0;
    height: auto;
    text-align: center;
}

    .pressure-plot-container {
        padding: 20px;
        border-radius: 7px;
        background-color: #1f2933;
        color: white;

    }
/* ASIDE */
aside {
    padding: 0 20px;
    background: #1f2933;
}

.status-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-radius: 7px;
    background: rgb(93, 109, 126);
    color: #fff;
    padding: 15px;
    margin: 30px 0;
    height: 140px;
    max-width: 350px;
}

    .status-container p {
        font-size: 20px;
        font-weight: lighter;
    }

.status-message {
    font-size: 35px;
    font-weight: bold;
}

/********************** Valve Actuation Switches Begin ***********************/


.valve-actuation-container h3 {
    color: white;
    font-size: 28px;
    font-weight: bold;
}

.valve-actuation {
    display: grid;
    grid-template-columns: 3fr 2fr;
    grid-auto-rows: minmax(50px, auto);
    padding: 5px;
    margin: 5px;
    cursor: auto;
  }
  


    .valve-actuation.translate {
        background: #2e325c;
        padding: 10px;
        border-radius: 7px;
        transform: rotate(-3deg);
        box-shadow: 0 3px 19px rgb(0 0 0 / 3%);
    }

.valve-info {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin-left: 5px;
}

/**************************************************************************/

.checkboxGroup{ 
    display:inline-block; 
    align-items: center;
    width:90px; border:none; 
}
.checkboxControl{ 
	border:2px solid #102838; border-radius:7px; display:inline-block; width:80px; height:40px; padding-top:1px; padding-left:1px; position:relative; vertical-align:middle; margin:0 30px 10px 0; color:#297597;
	box-shadow: 0 0 5px rgba(255,255,255,.4), 
				0 2px 1px -1px rgba(255,255,255,.7) inset, 
				8px 0 5px -5px #02425C inset,
				-8px 0 5px -5px #02425C inset;
	-moz-user-select:none; -webkit-user-select:none; 

	background:#80DCE9;
}
	.checkboxControl input{ position:absolute; visibility:hidden; }
	.checkboxControl > div{ 
		background:-webkit-linear-gradient(left, #8FD9E4 0%,#A0F2FE 53%,#69DCF1 56%,#33AFCE 99%,#CEF5FF 100%);
		background:linear-gradient(to right, #8FD9E4 0%,#A0F2FE 53%,#69DCF1 56%,#33AFCE 99%,#CEF5FF 100%);
		box-shadow:-2px 0 1px 0 #A6F2FE inset;
		border-radius:5px; line-height:35px; font-weight:bold; cursor:pointer; position:relative; z-index:1; text-shadow:0 1px rgba(255,255,255,0.5);
		transform-origin:0 0; -webkit-transform-origin:0 0; 
		transform:scaleX(0.93); -webkit-transform:scaleX(0.93);
		transition:.1s; -webkit-transition:0.1s;
	}
	.checkboxControl div:first-letter{ 
        padding-left:4px;
        letter-spacing:50px; 
    }
	
	.checkboxControl :checked ~ div{ 
		transform-origin:100% 0; -webkit-transform-origin:100% 0;
		box-shadow:2px 0 1px 0 #A6F2FE inset;
		background:-webkit-linear-gradient(left, #CEF5FF 0%,#33AFCE 1%,#69DCF1 47%,#A0F2FE 50%,#8FD9E4 100%);
		background:linear-gradient(to right, #CEF5FF 0%,#33AFCE 1%,#69DCF1 47%,#A0F2FE 50%,#8FD9E4 100%);
	}
	/* bottom shadow of 'upper' side of the button */
	.checkboxControl > b{ position:absolute; bottom:0; right:0; width:50%; height:100%; border-radius:8px; -webkit-transform:skewY(5deg); transform:skewY(5deg); box-shadow: 0 6px 8px -5px #000; }
	.checkboxControl :checked ~ b{ right:auto; left:0; -webkit-transform:skewY(-5deg); transform:skewY(-5deg); }

	/* the light indicator to the right of the button */

	.checkboxControl .indicator{ 
        position:absolute; 
        top:4px; right:-20px; 
        width:8px; height:25px; 
        box-shadow:0 0 8px #000 inset; 
        border:1px solid rgba(255,255,255,0.1); border-radius:15px; 
        transition:0.2s; -webkit-transition:0.2s; }
	.checkboxControl .indicator:before{ 
        content:''; 
        display:inline-block; 
        margin-top:8px; width:2px; height:8px; 
        border-radius:10px; transition:0.5s; 
        -webkit-transition:0.5s; }
	.checkboxControl :checked ~ .indicator:before{ 
        box-shadow:0 0 7px 6px #BAFC58; width:6px; 
        background:#F0F9E3; 
        transition:0.1s; -webkit-transition:0.1s; }


/* the light indicator to the left of the button */
.checkboxControl .indicatorOff{ 
    position:absolute; 
    top:4px; left:-20px; width:8px; height:25px; 
    box-shadow:0 0 8px #000 inset; 
    border:1px solid rgba(255,255,255,0.1); border-radius:15px; 
    transition:0.2s; -webkit-transition:0.2s; }

.checkboxControl .indicatorOff:before{ 
    content:''; 
    display:inline-block; 
    margin-top:8px; width:2px; height:8px; 
    border-radius:10px; transition:0.5s; 
    -webkit-transition:0.5s; }

.checkboxControl :not(:checked) ~ .indicatorOff:before{ 
    box-shadow:0 0 7px 6px #f80404; width:6px; 
    background:#F0F9E3; 
    transition:0.1s; -webkit-transition:0.1s; }
.checkboxControl :checked ~ .indicatorOff:before{ 
    box-shadow:0 0 1px 1px rgba(0,0,0,0); width:1px; 
    background:#000; 
    transition:0.1s; -webkit-transition:0.1s; }

   
    /******************************************************/



    .valve-info h6 {
        color: white;
        font-weight: bold;
        font-size: 16px;
    }

    .valve-info p {
        color: #595d7c;
        font-size: 13px;
    }
/********************** Valve Actuation Switches End ***********************/


/* Responsive */
@media screen and (max-width: 1213px) {
    #nav {
        display: none;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        width: 100%;
        z-index: 999;
    }

    .menu {
        display: flex;
        z-index: 10000;
    }

    .inner {
        grid-template-columns: 2fr 1fr;
    }

    .main__col--1 h2 {
        text-align: center;
    }
}

@media screen and (max-width: 860px) {
    .inner {
        grid-template-columns: 1fr;
    }
}

@media screen and (max-width: 595px) {
    .main__col--2,
    .main__col--3 {
        grid-template-columns: 1fr;
    }
}

